--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ buildscript {
 
         classpath Libs.Dokka.gradlePlugin
         classpath Libs.Kotlin.binaryCompatibility
+
+        classpath Libs.Shot.plugin
     }
 }
 
@@ -45,6 +47,18 @@ apiValidation {
 }
 
 subprojects {
+    configurations.configureEach {
+        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+            def group = details.requested.group
+            def module = details.requested.module.name
+
+            // Shot uses Kotlin 1.3.* so we need to force our version
+            if (group == 'org.jetbrains.kotlin') {
+                details.useVersion(Libs.Kotlin.version)
+            }
+        }
+    }
+
     repositories {
         google()
         mavenCentral()
