--- a/coil/build.gradle
+++ b/coil/build.gradle
@@ -22,6 +22,8 @@ plugins {
     id 'org.jetbrains.dokka'
 }
 
+apply plugin: 'shot'
+
 kotlin {
     explicitApi()
 }
@@ -31,7 +33,9 @@ android {
 
     defaultConfig {
         minSdkVersion 21
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        testInstrumentationRunner "com.karumi.shot.ShotTestRunner"
+        testApplicationId "dev.chrisbanes.accompanist.coil.test"
     }
 
     compileOptions {
@@ -93,6 +97,10 @@ dependencies {
     androidTestImplementation Libs.OkHttp.mockWebServer
 
     androidTestImplementation Libs.Coroutines.test
+
+    shotDependencies(Libs.Shot.library) {
+        exclude group: 'androidx.ui'
+    }
 
     androidTestImplementation Libs.AndroidX.Compose.test
     androidTestImplementation Libs.AndroidX.Compose.ui
